# rhizomorph

./: LICENSE  README.md
Sample Project/: Climate.cd.umeta  HeightFields.ufmeta  HighLowDensity.uescene  HighLowDensity.uescene.umeta  PlayGround.uescene  PlayGround.uescene.umeta  Project.ueproj  SampleScene.uescene  SampleScene.uescene.umeta  SampleSoils.ufmeta  Soil.ufmeta  SoilLayers.ufmeta  SplitRootTest.uescene  SplitRootTest.uescene.umeta  TreeDescriptors.ufmeta
Sample Project/HeightFields/: Dune.hf  Dune.hf.umeta  Flat.hf  Flat.hf.umeta
Sample Project/SampleSoils/: HF_1.hf  HF_1.hf.umeta  Layer_Floor.nsld  Layer_Floor.nsld.umeta  SD_1.sd  SD_1.sd.umeta  SD_2.sd  SD_2.sd.umeta  S_1_L1.nsld  S_1_L1.nsld.umeta  S_1_L2.nsld  S_1_L2.nsld.umeta  S_1_L3.nsld  S_1_L3.nsld.umeta  Scene_1.uescene  Scene_1.uescene.umeta  Scene_2.uescene  Scene_2.uescene.umeta  density_soil.ueproj
Sample Project/Soil/: Fancy.sd  Fancy.sd.umeta  Fig15_1.sd  Fig15_1.sd.umeta  Fig15_2.sd  Fig15_2.sd.umeta  HighLowDensitySoil.sd  HighLowDensitySoil.sd.umeta  PlayGround.sd  PlayGround.sd.umeta  SlopeGround.sd  SlopeGround.sd.umeta  SplitRootTest.sd  SplitRootTest.sd.umeta
Sample Project/SoilLayers/: Basic.nsld  Basic.nsld.umeta  Empty.nsld  Empty.nsld.umeta  Fancy.ufmeta  HighDensity.nsld  HighDensity.nsld.umeta  HighDensityThin.nsld  HighDensityThin.nsld.umeta  LowDensity.nsld  LowDensity.nsld.umeta  MediumDensity.nsld  MediumDensity.nsld.umeta  NutrientTest.ufmeta  Rocks.nsld  Rocks.nsld.umeta  Sand.nsld  Sand.nsld.umeta  SplitRootTest.nsld  SplitRootTest.nsld.umeta
Sample Project/SoilLayers/Fancy/: Fancy.hf  Fancy.hf.umeta  Layer1.nsld  Layer1.nsld.umeta  Layer2.nsld  Layer2.nsld.umeta  Layer3.nsld  Layer3.nsld.umeta  Layer4.nsld  Layer4.nsld.umeta  Layer5.nsld  Layer5.nsld.umeta
Sample Project/SoilLayers/NutrientTest/: LowNutrient1stLayer.nsld  LowNutrient1stLayer.nsld.umeta  LowNutrient3rdLayer.nsld  LowNutrient3rdLayer.nsld.umeta  NutrientPocket.nsld  NutrientPocket.nsld.umeta
Sample Project/TreeDescriptors/: Butter.td  Butter.td.umeta  Elm.td  Elm.td.umeta  Hickory.td  Hickory.td.umeta  Shadbush.td  Shadbush.td.umeta  Spruce.td  Spruce.td.umeta  Trees.trees  Trees.trees.umeta  Tulip.td  Tulip.td.umeta
Source Code/EcoSysLab/: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Source Code/EcoSysLab/include/EcoSysLab/: Climate.hpp  EcoSysLabLayer.hpp  Soil.hpp  Tree.hpp  Trees.hpp
Source Code/EcoSysLab/include/EcoSysLab/ClimateModel/: ClimateModel.hpp
Source Code/EcoSysLab/include/EcoSysLab/PipeModel/: PipeModel.hpp  PipeModelData.hpp  PipeModelParameters.hpp
Source Code/EcoSysLab/include/EcoSysLab/Reconstruction/: TreePointCloud.hpp
Source Code/EcoSysLab/include/EcoSysLab/SoilModel/: HeightField.hpp  SoilModel.hpp
Source Code/EcoSysLab/include/EcoSysLab/SorghumModel/: CBTFGroup.hpp  DoubleCBTF.hpp  LeafData.hpp  LeafSegment.hpp  PARSensorGroup.hpp  PanicleData.hpp  ProceduralSorghum.hpp  SkyIlluminance.hpp  SorghumData.hpp  SorghumField.hpp  SorghumLayer.hpp  SorghumStateGenerator.hpp  Spline.hpp  StemData.hpp
Source Code/EcoSysLab/include/EcoSysLab/Structures/: Curve.hpp  HexagonGrid.hpp  Octree.hpp  PipeStructure.hpp  PlantStructure.hpp  VoxelGrid.hpp
Source Code/EcoSysLab/include/EcoSysLab/TreeModel/: TreeGrowthController.hpp  TreeGrowthData.hpp  TreeIlluminationEstimator.hpp  TreeModel.hpp  VigorSink.hpp
Source Code/EcoSysLab/include/EcoSysLab/Utilities/: AutoTreeGenerationPipeline.hpp  IVolume.hpp  LSystemString.hpp  MarchingCubes.hpp  Noises.hpp  ObjectRotator.hpp  RadialBoundingVolume.hpp  TreeGraph.hpp  TreeMeshGenerator.hpp  TreeVisualizer.hpp
Source Code/EcoSysLab/src/EcoSysLab/: AutoTreeGenerationPipeline.cpp  CBTFGroup.cpp  Climate.cpp  ClimateModel.cpp  Curve.cpp  DoubleCBTF.cpp  EcoSysLabLayer.cpp  HeightField.cpp  IVolume.cpp  LSystemString.cpp  LeafData.cpp  LeafSegment.cpp  MarchingCubes.cpp  Noises.cpp  ObjectRotator.cpp  PARSensorGroup.cpp  PanicleData.cpp  PipeModel.cpp  ProceduralSorghum.cpp  RadialBoundingVolume.cpp  SkyIlluminance.cpp  Soil.cpp  SoilModel.cpp  SorghumData.cpp  SorghumField.cpp  SorghumLayer.cpp  SorghumStateGenerator.cpp  Spline.cpp  StemData.cpp  Tree.cpp  TreeGraph.cpp  TreeIlliminationEstimator.cpp  TreeMeshGenerator.cpp  TreeModel.cpp  TreePointCloud.cpp  TreeVisualizer.cpp  Trees.cpp  VigorSink.cpp
Source Code/EcoSysLab/src/Internals/EcoSysLabResources/Shaders/Compute/: TreeBranch.comp
Source Code/EcoSysLab/src/app/: Application.cpp  imgui.ini
Source Code/RayTracerFacility/: CMakeLists.txt  README.md
Source Code/RayTracerFacility/cmake/: FindOptiX.cmake
Source Code/RayTracerFacility/include/RayTracerFacility/MLVQ/: BTFBase.cuh  BTFMeshRenderer.hpp  CIELab.cuh  CompressedBTF.hpp  IndexAB.cuh  PDF1D.cuh  PDF2D.cuh  PDF3D.cuh  PDF4D.cuh  PDF6D.cuh  SharedCoordinates.cuh  VectorColor.cuh
Source Code/RayTracerFacility/include/RayTracerFacility/RayTracer/: BSDF.cuh  BSSDF.cuh  CUDAModule.hpp  CudaMath.hpp  CurveSplineDefinations.hpp  Enums.hpp  Environment.cuh  HitInfo.hpp  RayDataDefinations.hpp  RayFunctions.cuh  RayTracer.hpp  RayTracerCamera.hpp  RayTracerLayer.hpp  RayTracerUtilities.cuh
Source Code/RayTracerFacility/include/RayTracerFacility/Utilities/: LightProbeGroup.hpp  PointCloudScanner.hpp  TriangleIlluminationEstimator.hpp
Source Code/RayTracerFacility/src/RayTracerFacility/: CUDAModule.cpp  LightProbeGroup.cpp  PointCloudScanner.cpp  RayTracer.cu  RayTracerCamera.cpp  RayTracerLayer.cpp  TriangleIlluminationEstimator.cpp
Source Code/RayTracerFacility/src/RayTracerFacility/MLVQ/: BTFMeshRenderer.cpp  CompressedBTF.cpp
Source Code/RayTracerFacility/src/RayTracerFacility/ptx/: CameraRendering.cu  IlluminationEstimation.cu  PointCloudScanning.cu
Source Code/RayTracerFacility/src/app/: Application.cpp  imgui.ini
